added path to libs

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,4 +19,4 @@ monitor_port = COM3
 monitor_rts = 0
 monitor_dtr = 0
 
-; lib_extra_dirs = C:\Users\user\Documents\Arduino\libraries\
+lib_extra_dirs = C:\Users\user\Documents\Arduino\libraries\
